# matbench-genmetrics

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  environment.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  draft-pdf.yml
docs/: conf.py  index.md  metrics.md  requirements.txt
notebooks/: 1.0-matbench-genmetrics-basic.ipynb  template.ipynb
notebooks/core/: 1.0-matbench-genmetrics-basic.ipynb  2.0-matbench-genmetrics-materials_discovery_progress_benchmark.ipynb  template.ipynb
notebooks/mp_time_split/: 1.0-basic-usage.ipynb  mp-api-colab-py38.ipynb  template.ipynb
reports/: equations.nb  matbench-genmetrics.tex  paper.bib  paper.md
reports/equations/: coverage.tex  novelty.tex  uniqueness.tex  validity.tex
scripts/: fingerprint_snapshot.py  load_imagen_pytorch_generated.py  matbench_genmetrics_100.py  matbench_genmetrics_basic.py  train_model.py  validity_snapshot.py
scripts/core/: fingerprint_snapshot.py  load_imagen_pytorch_generated.py  matbench_genmetrics_100.py  matbench_genmetrics_basic.py  run_grayskull.py  train_model.py  validity_snapshot.py
scripts/mp_time_split/: data_snapshot.py  run_grayskull.py  train_model.py
src/core/: __init__.py  core.py
src/core/utils/: featurize.py
src/matbench_genmetrics/: core.py
src/matbench_genmetrics/cdvae/: constants.py  metrics.py
src/matbench_genmetrics/core/: __init__.py  metrics.py
src/matbench_genmetrics/core/utils/: featurize.py  match.py  plotting.py
src/matbench_genmetrics/mp_time_split/: __init__.py  splitter.py
src/matbench_genmetrics/mp_time_split/utils/: api.py  data.py  gen.py  mp_dummy_time_summary.json  split.py
src/matbench_genmetrics/utils/: featurize.py  match.py  plotting.py
src/matbench_genmetrics/utils/pymatviz/: elements.csv  ptable.py
tests/: _test_debug.py  conftest.py  test_matbench_genmetrics.py  test_mp_time_split.py
